Fixed issue where menu items where not centered properly

--- a/main.css
+++ b/main.css
@@ -120,25 +120,26 @@ h1, .show__card__header {
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center; }
-    .nav__small__menu__list__item:link, .nav__small__menu__list__item:visited {
-      display: block;
-      font-size: 3rem;
-      font-weight: 300;
-      padding: 1rem 2rem;
-      color: #000;
-      text-decoration: none;
-      text-transform: uppercase;
-      background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #000 50%);
-      background-size: 230%;
-      transition: all .4s; }
-    .nav__small__menu__list__item:hover {
-      background-position: 100%;
-      color: #fff; }
+    .nav__small__menu__list__item {
+      margin-right: 2.6rem; }
+      .nav__small__menu__list__item:link, .nav__small__menu__list__item:visited {
+        display: block;
+        font-size: 3rem;
+        font-weight: 300;
+        color: #000;
+        text-decoration: none;
+        text-transform: uppercase;
+        background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #000 50%);
+        background-size: 230%;
+        transition: all .4s; }
+      .nav__small__menu__list__item:hover {
+        background-position: 100%;
+        color: #fff; }
 
 .nav__small__button {
   background-color: rgba(246, 247, 235, 0.6);
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 4rem;
+  width: 4rem;
   position: fixed;
   top: 1rem;
   right: 1rem;
@@ -149,8 +150,8 @@ h1, .show__card__header {
   cursor: pointer; }
 
 .nav__small__background {
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 4rem;
+  width: 4rem;
   border-radius: 50%;
   position: fixed;
   top: 1rem;
@@ -169,9 +170,9 @@ h1, .show__card__header {
 
 .nav__small__icon {
   position: relative;
-  margin-top: 1.2rem; }
+  margin-top: 2rem; }
   .nav__small__icon, .nav__small__icon::before, .nav__small__icon::after {
-    width: 1rem;
+    width: 2rem;
     height: 2px;
     background-color: #bbb;
     display: inline-block; }
@@ -181,15 +182,15 @@ h1, .show__card__header {
     left: 0;
     transition: all .2s; }
   .nav__small__icon::before {
-    top: -.4rem; }
+    top: -.55rem; }
   .nav__small__icon::after {
-    top: .4rem; }
+    top: .55rem; }
 
 .nav__small__button:hover .nav__small__icon::before {
-  top: -.5rem; }
+  top: -.6rem; }
 
 .nav__small__button:hover .nav__small__icon::after {
-  top: .5rem; }
+  top: .6rem; }
 
 .nav__small__checkbox:checked + .nav__small__button .nav__small__icon {
   background: transparent; }
